kubernetes/elasticsearch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic-ingress
  namespace: default
  labels:
    app: quickstart-es-default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - elastic.natsucloud.com
      secretName: certificate-elastic
  rules:
    - host: elastic.natsucloud.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: quickstart-es-http
                port:
                  number: 9200
