kubernetes/kibana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: default
  labels:
    app: kibana
  annotations:
    cert-manager.io/cluster-issuer: clusterissuer-prod
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kibana.natsucloud.com
      secretName: certificate-kibana
  rules:
    - host: kibana.natsucloud.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: quickstart-kb-http
                port:
                  number: 5601
